test/dumpExit.slq
// args: --run

def main(){
	x:=array(5,0:ğ”¹);
	for i in [0..5){
		x[i]:=H(x[i]);
	}
	dump();
	exit(); // error
	forget(x=[]);
}
